--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,19 +8,22 @@
     <title>Gerador de Senha</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <img src="" alt="cadeado fechado">
-    <h2 class="titulo-principal"> Gerador de Senhas</h2>
-    <h3 class="titulo-secundario"> Gere Instantateamente uma senha aleatória e segura</h3>
-   
-    <script src="https://cdn.lordicon.com/lordicon.js"></script>
-<lord-icon
-    src="https://cdn.lordicon.com/kbhtjtxs.json"
-    trigger="hover"
-    colors="primary:#121331,secondary:#9ce5f4"
-    style="width:250px;height:250px">
-</lord-icon>
-    
-</body>
-</html>
 
+<body>
+    <section class="conteudo">
+        <div class="conteudo-titulo">
+            <h2 class="titulo-principal"> Gerador de Senhas</h2>
+            <h3 class="titulo-secundario"> Gere Instantateamente uma senha aleatória e segura</h3>
+            <script src="https://cdn.lordicon.com/lordicon.js"></script>
+            <lord-icon src="https://cdn.lordicon.com/pdwpcpva.json" trigger="hover"
+                colors="primary:#ffffff,secondary:#000000" style="width:150px;height:150px">
+            </lord-icon>
+        </div>
+        <div class="conteudo-senha">
+            <label for="senha"> Senha </label>
+            <input name="senha" type="text" id="campo-senha">
+        </div>
+    </section>
+</body>
+
+</html>
